Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

* Mon Oct 08 2007 - 0.6.3
- Replace @@server@@ in repo config files

* Fri Sep 28 2007 - 0.6.2
- cobbler repo auto-add to discover yum repos automatically
- fix bug that allows empty mac addresses (None) in dhcpd.conf
- kickstarts automatically save kickstart file used to /root/cobbler.ks
- allow multiple (comma-seperated) values for --virt-size
- removed deprecated 'enchant' function (use SSH and koan instead)
- cleanup of a few unused settings
- allow for serialization modules to be selected in /etc/cobbler/modules.conf
- patch to allow for reposync of specific repos, even if not set to update
- added --dhcp-tag section for better DHCP customization (esp with multiple subnets)
- added Apache proxying around XMLRPC port for wider network access
- refactor XMLRPC API and establish a read-write API
- allow for configuring of read-write XMLRPC users in /etc/cobbler/auth.conf
- WebUI
- packaged /var/lib/cobbler/settings as a config file
- added BuildRequires to help build on other platforms
- relocate cgi-bin files to cgi-bin/cobbler for namespacing
- fix syslog logging for systems not in the cobbler DB.
- fix bug in which non-lowercase intermediate objects could be deleted 
 
* Thu Aug 30 2007 - 0.6.1
- re enable --resolve in yumdownloader (cobbler repo mgmt feature)
- fix get_distros_for_koan API function in cobblerd (not used by koan)
- allow find API to search by arbitrary fields
- status and logging now shows system names
- upgraded init scripts
- zeroconf/avahi publishing for cobblerd service
- logRequests = 0 for XMLRPC.  Make it be quiet.
- ignore subdirectories of /var/lib/cobbler/snippets
- fixed bug in graph rendering that allowed for upward property propogation in some cases
- fixed bug that did not correctly evaluate repository settings of inherited sub-profiles/objects
- tweaked domU sample kickstart to include wget
- added some more unit tests