@@ -2,7 +2,8 @@ Cobbler CHANGELOG
 (all entries mdehaan@redhat.com unless noted otherwise)
 
 * Mon Oct 08 2007 - 0.6.3
-- Replace @@server@@ in repo config files
+- Be able to define and use Multiple NICs per system
+- Use server address not @@server in repo config files
 
 * Fri Sep 28 2007 - 0.6.2
 - cobbler repo auto-add to discover yum repos automatically
